// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card matches snapshot when editing data 1`] = `
.c1 {
  background: #f5f5f5;
}

.c1 .c2 {
  margin-top: 0.8rem;
}

.c0 {
  position: absolute;
  padding: 0.8rem;
  border-radius: 0.4rem;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.14),0 2px 2px 0 rgba(0,0,0,0.12),0 1px 3px 0 rgba(0,0,0,0.2);
  left: calc(100% - ((100% - 82.5rem) / 2) + 3rem);
  right: unset;
  top: 0px;
  display: none;
}

@media (max-width:110.3125em) {
  .c0 {
    left: calc(100% - ((100% - 82.5rem) / 2) + 3rem);
    right: unset;
    top: 0px;
    display: none;
    display: none;
  }
}

@media (max-width:103.75em) {
  .c0 {
    display: none;
    left: calc(100% - ((100% - 82.5rem) / 2) + 3rem);
    right: unset;
    top: 0px;
    display: none;
  }
}

@media (max-width:82.8125em) {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    display: none;
  }
}

<form
  className="c0 c1"
>
  <div
    mock-color-picker={true}
    onChange={[Function]}
    onRemove={[Function]}
  />
  <div
    mock-note={true}
    note=""
    onChange={[Function]}
  />
</form>
`;

exports[`Card matches snapshot when focused 1`] = `
.c1 {
  background: #f5f5f5;
}

.c1 .c2 {
  margin-top: 0.8rem;
}

.c0 {
  position: absolute;
  padding: 0.8rem;
  border-radius: 0.4rem;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.14),0 2px 2px 0 rgba(0,0,0,0.12),0 1px 3px 0 rgba(0,0,0,0.2);
  left: calc(100% - ((100% - 82.5rem) / 2) + 3rem);
  right: unset;
  top: 0px;
  left: calc(100% - ((100% - 82.5rem) / 2) + 1rem);
}

.c0::before {
  content: ' ';
  border-radius: 0.4rem 0 0 0.4rem;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  width: 0.4rem;
  background-color: #fed200;
}

@media screen and (max-width:75em) {
  .c0::before {
    border-radius: 0.4rem 0.4rem 0 0;
    right: 0;
    bottom: unset;
    width: unset;
    height: 0.4rem;
  }
}

@media (max-width:110.3125em) {
  .c0 {
    left: calc(100% - ((100% - 82.5rem) / 2) + 3rem);
    right: unset;
    top: 0px;
    left: calc(100% - ((100% - 82.5rem) / 2) + 1rem);
  }
}

@media (max-width:103.75em) {
  .c0 {
    left: unset;
    right: 2rem;
    top: 0px;
  }
}

@media (max-width:82.8125em) {
  .c0 {
    left: unset;
    right: 2rem;
    top: 0px;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    left: 0;
    right: 0;
    bottom: 0;
    top: unset;
    position: fixed;
    padding: 0;
  }
}

<form
  className="c0 c1"
>
  <div
    color="yellow"
    mock-color-picker={true}
    onChange={[Function]}
    onRemove={[Function]}
  />
  <div
    mock-note={true}
    note=""
    onChange={[Function]}
  />
</form>
`;

exports[`Card matches snapshot without data 1`] = `
.c1 {
  background: #f5f5f5;
}

.c1 .c2 {
  margin-top: 0.8rem;
}

.c0 {
  position: absolute;
  padding: 0.8rem;
  border-radius: 0.4rem;
  box-shadow: 0 0 2px 0 rgba(0,0,0,0.14),0 2px 2px 0 rgba(0,0,0,0.12),0 1px 3px 0 rgba(0,0,0,0.2);
  left: calc(100% - ((100% - 82.5rem) / 2) + 3rem);
  right: unset;
  top: 0px;
  display: none;
}

@media (max-width:110.3125em) {
  .c0 {
    left: calc(100% - ((100% - 82.5rem) / 2) + 3rem);
    right: unset;
    top: 0px;
    display: none;
  }
}

@media (max-width:103.75em) {
  .c0 {
    display: none;
  }
}

@media (max-width:82.8125em) {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    display: none;
  }
}

<form
  className="c0 c1"
>
  <div
    mock-color-picker={true}
    onChange={[Function]}
    onRemove={[Function]}
  />
  <div
    mock-note={true}
    note=""
    onChange={[Function]}
  />
</form>
`;
